--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -387,6 +387,16 @@
     }
    },
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "execution_count": 16,
    "source": [
     "# Exercise 12\n",
     "string00 = \"aeiou\"\n",
@@ -401,17 +411,55 @@
     "\n",
     "print(count_vowels(string00))"
    ],
-   "id": "40a26e8d318bb5df",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
+   "id": "40a26e8d318bb5df"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "13. Find Maximum: Write a function find_max that takes three numbers and returns the maximum of the three.\n",
+    "\n",
+    "14. Palindrome Check: Write a function is_palindrome that takes a string and returns True if the string is a palindrome and False otherwise.\n",
+    "\n",
+    "15. Temperature Conversion: Write a function celsius_to_fahrenheit that takes a temperature in Celsius and returns the temperature in Fahrenheit."
    ],
-   "execution_count": 16
+   "id": "1dd1f700de301806"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Exercise 13\n",
+    "def find_max (a, b, c):\n",
+    "    return max(a, b, c)"
+   ],
+   "id": "8b29e28dfa8a7797"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Exercise 14\n",
+    "def is_palindrome (word):\n",
+    "    return word == word[::-1]"
+   ],
+   "id": "98988d4dc4d572c2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Exercise 15\n",
+    "def celsius_to_fahrenheit (celsius):\n",
+    "    return celsius * (9 / 5) + 32"
+   ],
+   "id": "2d0251f6e6ad0224"
   }
  ],
  "metadata": {
