--- a/Loops (List & String).ipynb
+++ b/Loops (List & String).ipynb
@@ -702,8 +702,7 @@
     "for (i,val) in enumerate(l9):\n",
     "    if val == 7:\n",
     "        print(i)\n",
-    "        break\n",
-    "\n"
+    "        break\n"
    ],
    "id": "2ab9965604727087",
    "outputs": [
